Pagination Hateoas on activity, trip and user